--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -7,7 +7,8 @@
 
 }
 
-*, ::after, ::before {
+*, *::after, 
+*::before {
     box-sizing: border-box;
 }
 
@@ -20,14 +21,23 @@ body {
     line-height: 1,71;
     letter-spacing: 0.03em;
 }
-
+/* 
 .page-header {
-background-color: var(--contrast-color);
-}
+background-color: greenyellow;box-sizing: border-box;
+} */
 
 /* Logo */
 
+.container.border {
+    border-bottom-width: 1px;
+    border-bottom-color: #ececec;
+    border-bottom-style: solid;
+    display: flex;
+    align-items: center;
+}
+
 .logo {
+    display: inline-block;
     color: #000000;
     text-decoration: none;
     font-family: Raleway, cursive;
@@ -35,7 +45,7 @@ background-color: var(--contrast-color);
     font-size: 26px;
     line-height: 1.2;
     padding-top: 24px;
-    padding-left: 215px;
+    margin-left: 0;
  }
 
 .logo-web {
@@ -49,20 +59,43 @@ background-color: var(--contrast-color);
 
  .list {
     list-style: none;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-left: 0;
  }
 
  /*  Site nav */
 
-          /* display: inline; */
+.site-nav,
+.contact {
+    padding-left: 0;
+}
+
+.site-nav.list {
+    margin-left: 93px;
+}
 
 .site-nav .link {
-        color: var(--primary-text-color);
-        text-decoration: none;
-        font-family: 'Roboto';
-        font-weight: 500;
-        font-size: 14px;
-        line-height: 1.14;
-        letter-spacing: 0.02em;
+    color: var(--primary-text-color);
+    text-decoration: none;
+    font-family: 'Roboto';
+    font-weight: 500;
+   font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+ }
+
+ .site-nav {
+    padding-top: 32px;
+    display: flex;    
+ }
+
+ .site-nav .item {
+    margin-right: 50px;
+ }
+
+ .site-nav .item:last-child {
+    margin-right: 0;
  }
 
  .site-nav .link:hover, 
@@ -74,10 +107,17 @@ background-color: var(--contrast-color);
      color: var(--accent-color);
  }
 
- /* .studio {
-    padding-left: 93px;
-    padding-top: 32px;
- } */
+.main-nav {
+    display: flex;
+    padding-bottom: 32px;
+}
+
+
+.contact.list {
+    display: flex;
+    margin-left: 344px;
+    padding-bottom: 32px;
+}
 
 .contact {
     color: var(--title-text-color);
@@ -87,6 +127,15 @@ background-color: var(--contrast-color);
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
+    padding-top: 32px;
+}
+
+/* .contact.list > .item:not(:last-child) {
+    margin-right: 50px;
+} */
+
+.contact.list .item + .item {
+    margin-left: 50px;
 }
 
 .contact:hover,
@@ -96,17 +145,20 @@ background-color: var(--contrast-color);
 
 /* Hero */
 .hero {
-background-color: var(--grey-bg-color);
+    background-color: var(--grey-bg-color);
+    text-align: center;
 }
 
  .hero-title {
+    margin-top: 0;
+    margin-bottom: 30px;
     color: var(--contrast-color);
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
-    text-align: center;
     letter-spacing: 0.06em;
     text-transform: uppercase;
+    padding-top: 200px;
  }
 
  /* Section */
@@ -118,17 +170,30 @@ background-color: var(--grey-bg-color);
     line-height: 1.16;
     text-align: center;
     letter-spacing: 0.03em;
+    list-style: none;
+    margin-top: 0;
+    margin-bottom: 50px;
  }
 
  .container {
     width: 1200px;
-    padding-left: 15px;
     padding-right: 15px;
+    padding-left: 15px;
     margin-left: auto;
     margin-right: auto;
  }
 
+
+
  /* Features */
+
+ .feature-list.list{
+    display: flex;
+ }
+
+ .feature-list.list .item + .item {
+     margin-left: 30px;
+ }
 
  .feature-list .title {
     color: var(--primary-text-color);
@@ -137,6 +202,12 @@ background-color: var(--grey-bg-color);
     line-height: 1.14;
     letter-spacing: 0.03em;
     text-transform: uppercase;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.title {
+    margin-bottom: 10px;
 }
 
  .feature-list {
@@ -146,35 +217,93 @@ background-color: var(--grey-bg-color);
 .description {
     font-size: 14px;
     line-height: 1.71;
+    margin-top: 10px;
+    margin-bottom: 0;
+    max-width: 270px;
 }
 
-/* Comand */
+.indent.unique {
+    padding-bottom: 0;
+}
+
+/* What we do */
+
+.list.work {
+display: flex;
+}
+
+.list.work .item +.item {
+    margin-left: 30px;
+}
+
+
+/* Team */
 
 .name {
     color: var(--primary-text-color);
     font-weight: 500;
     font-size: 16px;
     line-height: 1.17;
+    margin-bottom: 10px;
+    margin-top: 0;
+    padding-top: 30px;
+    text-align: center;
 }
 
 .position {
     font-size: 16px;
     line-height: 1.17;
+    padding-bottom: 30px;
+    margin-top: 0;
+    margin-bottom: 0;
+    text-align: center;
+}   
+
+.workers {
+    margin-top: 0;
+    margin-bottom: 50px;
 }
+
+.team-unit {
+    margin-top: 0;
+    width: 270px;
+    border-radius: 0px 0px 4px 4px;
+    background-color: var(--contrast-color);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+}
+
+.team {
+    background-color: #F5F4FA;
+}
+
+.view {
+    display: block;
+}
+
+.list.team {
+    display: flex;
+}
+
+.list.team .item + .item {
+    margin-left: 30px;
+}
+
 
 /* Button */
 
 .button {
-    text-decoration: none;
+    display: inline-block;
     color: var(--primary-text-color);
     background-color: var(--contrast-color);
     font-family: Roboto, sans-serif;
-    display: inline-block;
     text-align: center;
     cursor: pointer;
+    border-style: none;
+    box-sizing: border-box;
 }
 
 .button-primary {
+    border-radius: 4px;
     color: var(--contrast-color);
     background-color: var(--accent-color);
     min-width: 216px;
@@ -182,8 +311,9 @@ background-color: var(--grey-bg-color);
     font-size: 16px;
     line-height: 1.88;
     letter-spacing: 0.06em;
-    border-radius: 4px;
+    border: transparent;
     padding: 10px 32px;
+    margin-bottom: 200px;
 }
 
 .button-secondary {
@@ -192,9 +322,16 @@ background-color: var(--grey-bg-color);
     min-width: 73px;
     font-weight: 500;
     font-size: 16px;
-    line-height: 1.62;
+    line-height: 1.62;  
     border-radius: 4px;
     padding: 6px 22px;
+    border: transparent;
+    letter-spacing: 0.03em;
+    background: #F5F4FA;
+    }
+
+.button-secondary.different {
+    padding: 6px 25px;
 }
 
 .button-secondary:hover,
@@ -203,25 +340,23 @@ background-color: var(--grey-bg-color);
     background-color: #2196f3;
 }
 
-/* Наша команда */
-
-.team {
-background-color: #F5F4FA;
-}
 
 /* Підвал */
 
-.section-bottom {
+.bottom {
     background-color: var(--grey-bg-color);
 }
 
 .logo-bottom {
 color: var(--contrast-color);
+display: inline-block;
 text-decoration: none;
 font-family: Raleway, cursive;
 font-weight: 700;
 font-size: 26px;
 line-height: 1.19;
+padding-top: 60px;
+margin-bottom: 20px;
 }
 
 .location {
@@ -230,6 +365,8 @@ line-height: 1.19;
     line-height: 1.71;
     text-decoration: none;
     font-style: normal;
+    margin-top: 20px;
+    margin-bottom: 9px;
 }  
 
 
@@ -242,6 +379,7 @@ line-height: 1.19;
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
+    padding-bottom: 9px;
 }
 
 .communication:hover,
@@ -249,15 +387,70 @@ line-height: 1.19;
     color: var(--accent-color);
 }
 
+.comunication-list {
+    padding-bottom: 60px;
+    padding-left: 0 ;
+}
+
 
 /* Second page - Main */
+
+.indent {
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
+
+.list.portfolio {
+    display: inline-block;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-bottom: 16px;
+    display: flex;
+justify-content: center;
+}
+
+.list.portfolio .item:not(:first-child) {
+    margin-left: 8px;
+}
+
+
+.type-button {
+    margin-bottom: 34px;
+    margin-top: 0;
+}
+
+.portfolio > .border {
+border: 1px solid #EEEEEE;
+width: 370px;
+}
+
+.list.model {
+    display: flex;
+    flex-wrap: wrap;
+    }
+
+.list.model .item {
+    margin-right: 30px;
+    margin-bottom: 30px;
+}
+
+.list.model .item:nth-child(3n) {
+    margin-right: 0px;
+} 
+
+.list.model .border {
+    border: 1px solid #EEEEEE;
+}
 
 .product {
     color: #212121;
     font-weight: 700;
     font-size: 18px;
     line-height: 2;
-letter-spacing: 0.06em;
+    letter-spacing: 0.06em;
+    margin-top: 20px;
+    padding-left: 24px;
+    margin-bottom: 0;
 }
 
 .product-link {
@@ -268,6 +461,10 @@ letter-spacing: 0.06em;
 .product-type {
 font-size: 16px;
 line-height: 1.87;
+margin-top: 4px;
+padding-left: 24px;
+padding-bottom: 20px;
+margin-bottom: 0;
 }
 
 .visually-hidden {
